--- a/vision.html
+++ b/vision.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from themeht.com/template/labortech/html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2024 12:00:50 GMT -->
+<!-- Mirrored from themeht.com/template/labortech/html/team.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2024 12:00:50 GMT -->
 <head>
 
   <!-- meta tags -->
@@ -145,14 +145,25 @@
 
 <!-- preloader start -->
 
-
+<!-- <div id="ht-preloader">
+  <div class="clear-loader d-flex align-items-center justify-content-center">
+    <div class="loader">
+     <span class="plus"></span>
+    <span class="plus"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+    </div>
+  </div>
+</div> -->
 
 <!-- preloader end -->
 
 
 <!--header start-->
 
-<header id="site-header" class="header"></header>
+<header id="site-header" class="header">
   
   <div id="header-wrap">
     <div class="container-fluid px-lg-8">
@@ -171,8 +182,8 @@
                 <!-- Home -->
                 <li class="nav-item dropdown"> <a class="nav-link  " href="index.html" data-bs-toggle="">Home</a></li>
                 <li class="nav-item dropdown"> <a class="nav-link  " href="about-us.html" data-bs-toggle="">About-Us</a></li>
-                <li class="nav-item dropdown"> <a class="nav-link active " href="contact.html" data-bs-toggle="">Contact-Us</a></li>
-                <li class="nav-item dropdown"> <a class="nav-link  " href="vision.html" data-bs-toggle="">Our
+                <li class="nav-item dropdown"> <a class="nav-link  " href="contact.html" data-bs-toggle="">Contact-Us</a></li>
+                <li class="nav-item dropdown"> <a class="nav-link active" href="vision.html" data-bs-toggle="">Our
                   Vision</a></li>
 
               </ul>
@@ -189,18 +200,17 @@
 
 <!--page title start-->
 
-<section class="page-title parallaxie" data-bg-img="images/bg/01.jpg">
+<section class="page-title parallaxie" data-bg-img="images/bg/06.jpg">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
         <div class="white-bg p-md-5 p-3 d-inline-block">
-        <h1 class="text-theme">Contact <span class="text-black">Us</span></h1>
+        <h1 class="text-theme">Our <span class="text-black">Vision</span></h1>
         <nav aria-label="breadcrumb" class="page-breadcrumb border-top border-light pt-3 mt-3">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="index.html"><i class="las la-home me-1"></i>Home</a>
             </li>
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+            <li class="breadcrumb-item active" aria-current="page">Vision</li>
           </ol>
         </nav>
         </div>
@@ -215,112 +225,52 @@
 <!--body content start-->
 
 <div class="page-content">
-
-<!--contact start-->
-
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="light-bg">
-          <div class="row text-center">
-            <div class="col-lg-5 col-12">
-              <div class="section-title mt-6">
-                <h2 class="title">Drop A Line!</h2> 
-                <p class="mb-0">Any Question or Remarks ? Just Write Us a Message!</p>
+  <section class="vision-section py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto text-center">
+          <h2 class="mb-4">Our Vision</h2>
+          <p class="mb-5">
+            At Healthelixir, our vision is to be a leader in the pharmaceutical industry by embracing innovation, research, and sustainable practices. We are dedicated to enhancing global health and wellness by providing accessible, high-quality pharmaceutical solutions that meet the diverse needs of patients and healthcare providers.
+          </p>
+          <div class="row text-start">
+            <div class="col-md-6 mb-4">
+              <div class="vision-box p-4 rounded shadow-sm">
+                <h4 class="text-theme">Innovation & Research</h4>
+                <p class="mb-0">
+                  We aim to pioneer advanced research and technology to develop groundbreaking medicines that improve lives.
+                </p>
               </div>
             </div>
-            <div class="col-lg-7 ps-lg-0">
-              <div class="white-bg px-3 py-5 p-md-6 shadow-sm">
-                <form id="contact-form" class="row" method="post" action="">
-                  <div id="formmessage"></div>
-                  <div class="form-group col-md-6">
-                    <input id="form_name" type="text" name="name" class="form-control" placeholder="Name" required="required">
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input id="form_email" type="email" name="email" class="form-control" placeholder="Email" required="required">
-                  </div>
-                  <div class="form-group col-md-6">
-                    <input id="form_phone" type="tel" name="phone" class="form-control" placeholder="Phone" required="required">
-                  </div>
-                  <div class="form-group col-md-6">
-                    <select name="select" class="form-select form-control">
-                      <option>- Choose Service</option>
-                      <option>Prescription Refill</option>
-                      <option>Medication Consultation</option>
-                      <option>Over-the-Counter Medicines</option>
-                      <option>Pharmaceutical Care</option>
-                      <option>Vaccination Services</option>
-                      <option>Wellness and Health Products</option>
-                    </select>
-                  </div>
-                                    <div class="form-group col-md-12">
-                    <textarea id="form_message" name="message" class="form-control" placeholder="Message" rows="3" required="required"></textarea>
-                  </div>
-                  <div class="col-md-12 text-center mt-4">
-                    <button class="btn btn-theme"><span>Send Messages</span>
-                    </button>
-                  </div>
-                </form>
+            <div class="col-md-6 mb-4">
+              <div class="vision-box p-4 rounded shadow-sm">
+                <h4 class="text-theme">Sustainability & Quality</h4>
+                <p class="mb-0">
+                  Commitment to sustainable and high-quality pharmaceutical manufacturing practices to ensure the well-being of our patients and the environment.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="vision-box p-4 rounded shadow-sm">
+                <h4 class="text-theme">Accessible Healthcare</h4>
+                <p class="mb-0">
+                  Our goal is to make healthcare accessible and affordable for communities around the world, ensuring better health for all.
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mb-4">
+              <div class="vision-box p-4 rounded shadow-sm">
+                <h4 class="text-theme">Empowering Partnerships</h4>
+                <p class="mb-0">
+                  We strive to build strong partnerships with healthcare professionals, stakeholders, and communities to drive positive change in healthcare.
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-5 pe-lg-0">
-        <div class="dark-bg px-3 py-5 p-md-5 mt-n15 custom-mt-0 text-white">
-          <div class="contact-media mb-4">
-            <h5 class="text-white">Find Office:</h5>
-            <span>95/UG-1, Vrindavan Garden S.B.D, Ghaziabad, 201001</span>
-          </div>
-          <div class="contact-media mb-4">
-            <h5 class="text-white">Contact Us:</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2">Phone: <a href="tel:9769000468">+919769000468</a></li>
-              <li>Email: <a href="mailto:info@healthelixir.in">info@healthelixir.in</a></li>
-            </ul>
-          </div>
-          <div class="contact-media mb-4">
-            <h5 class="text-white">Working Hours:</h5>
-            <span>24 x 7</span>
-          </div>
-          <!-- <div class="social-icons">
-            <ul class="list-inline">
-              <li><a href="#"><i class="lab la-facebook-f"></i></a></li>
-              <li><a href="#"><i class="lab la-twitter"></i></a></li>
-              <li><a href="#"><i class="lab la-instagram"></i></a></li>
-              <li><a href="#"><i class="lab la-dribbble"></i></a></li>
-              <li><a href="#"><i class="lab la-linkedin-in"></i></a></li>
-            </ul>
-          </div> -->
-        </div>
-      </div>
-    </div>
-    
-  </div>
-</section>
-
-<!--contact end-->
-
-
-<!--map start-->
-
-<section class="p-0">
-  <div class="container-fluid p-0">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="map">
-          <iframe src="https://maps.google.com/maps?q=95/UG-1,%20VRINDAVAN%20GARDEN%20S.B.D,%20Ghaziabad,%20201001&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" allowfullscreen=""></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!--map end-->
-
+  </section>
 </div>
 
 <!--body content end--> 
@@ -328,7 +278,7 @@
 
 <!--footer start-->
 
-<footer class="footer light-bg">
+<footer class="footer light-bg"></footer>
   <div class="primary-footer">
     <div class="container-fluid">
       <div class="row">
@@ -357,7 +307,7 @@
               <div class="footer-contact my-4">
                 <ul class="media-icon list-unstyled">
                   <li><i class="flaticon-hospital"></i>
-                    <p class="mb-0">95/UG-1, Vrindavan Garden S.B.D, Ghaziabad,201001</p>
+                    <p class="mb-0">95/UG-1, VRINDAVAN GARDEN S.B.D, Ghaziabad,201001</p>
                   </li>
                   <li><i class="flaticon-medical-report"></i> <a
                       href="mailto:info@healthelixir.in">info@healthelixir.in</a></li>
@@ -399,6 +349,7 @@
 
 
 </div>
+
 <script src="js/theme.js"></script>
 
 <!--== theme-plugin -->
@@ -415,5 +366,4 @@
 </body>
 
 
-<!-- Mirrored from themeht.com/template/labortech/html/contact.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jul 2024 12:00:50 GMT -->
 </html>
