--- a/about-us.html
+++ b/about-us.html
@@ -151,7 +151,7 @@
 
 <!--page title start-->
 
-<section class="page-title parallaxie" data-bg-img="images/bg/01.jpg">
+<section class="page-title parallaxie" data-bg-img="images/bg/01.png">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -231,7 +231,7 @@
         <div class="section-title">
           <h2 class="title">About Healthelixir</h2>
           <p class="mb-0">
-            At Healthelixir, we strive to improve lives with cutting-edge research and high-quality pharmaceuticals, ensuring effective and safe healthcare solutions.
+            At Healthelixir Pharmaceuticals, our mission is to advance global health by leveraging cutting-edge scientific research and state-of-the-art biotechnological innovations. We are dedicated to the discovery, development, and manufacture of high-efficacy therapeutic agents that address complex medical challenges. Our commitment to pharmacovigilance and stringent regulatory compliance ensures the safety, quality, and affordability of our products. Through manufacturing excellence medicine, we aim to bridge the gap between patients need and  delivering satisfaction to healthcare professionals and patient care. Our focus is sustainable  and ethical practices which  drives us to lead the future as  "Science for improved Life" for betterment of humanity.
           </p>
         </div>
         <div class="d-flex align-items-start">
@@ -279,8 +279,8 @@
       <div class="col-md-5 col-12 ms-auto mt-3 mt-lg-0">
         <div class="d-flex align-items-start justify-content-end">
           <div class="text-white text-end"> <span>Help Desk 24/7</span>
-            <h3 class="font-w-4"><a class="text-decoration-underline text-white" href="tel:9769000468">+91
-              9769000468 </a></h3>
+            <h3 class="font-w-4"><a class="text-decoration-underline text-white" href="tel:9769748398">+91
+              9769748398 </a></h3>
     </div> <span class="white-bg d-inline-block p-2 ms-4"><i
               class="las la-phone ic-3x text-theme"></i></span>
         </div>
@@ -339,11 +339,14 @@
               <div class="footer-contact my-4">
                 <ul class="media-icon list-unstyled">
                   <li><i class="flaticon-hospital"></i>
-                    <p class="mb-0">95/UG-1, Vrindavan Garden S.B.D, Ghaziabad,201001</p>
+                    <p class="mb-0">Registered Office:95/UG-1, Vrindavan Garden S.B.D, Ghaziabad,201001</p>
+                  </li>
+                  <li><i class="flaticon-hospital"></i>
+                    <p class="mb-0">Regional Office:Shop no.16 F-Wing, Om lokmanya Shopping Center, Station Rd.,Bhayander west.Thane-401101</p>
                   </li>
                   <li><i class="flaticon-medical-report"></i> <a
                       href="mailto:info@healthelixir.in">info@healthelixir.in</a></li>
-                      <li><i class="flaticon-medical-assistance"></i> <a href="tel:9769000468">9769000468</a>
+                      <li><i class="flaticon-medical-assistance"></i> <a href="tel:9769748398">9769748398</a>
                       </li>
                   <li><i class="flaticon-working-hours"></i>
                     <p class="mb-0">24 x 7</p>
