--- a/vision.html
+++ b/vision.html
@@ -200,7 +200,7 @@
 
 <!--page title start-->
 
-<section class="page-title parallaxie" data-bg-img="images/bg/06.jpg">
+<section class="page-title parallaxie" data-bg-img="images/bg/02.png">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -307,11 +307,14 @@
               <div class="footer-contact my-4">
                 <ul class="media-icon list-unstyled">
                   <li><i class="flaticon-hospital"></i>
-                    <p class="mb-0">95/UG-1, VRINDAVAN GARDEN S.B.D, Ghaziabad,201001</p>
+                    <p class="mb-0">Registered Office:95/UG-1, Vrindavan Garden S.B.D, Ghaziabad,201001</p>
+                  </li>
+                  <li><i class="flaticon-hospital"></i>
+                    <p class="mb-0">Regional Office:Shop no.16 F-Wing, Om lokmanya Shopping Center, Station Rd.,Bhayander west.Thane-401101</p>
                   </li>
                   <li><i class="flaticon-medical-report"></i> <a
                       href="mailto:info@healthelixir.in">info@healthelixir.in</a></li>
-                      <li><i class="flaticon-medical-assistance"></i> <a href="tel:9769000468">9769000468</a>
+                      <li><i class="flaticon-medical-assistance"></i> <a href="tel:9769748398">9769748398</a>
                       </li>
                   <li><i class="flaticon-working-hours"></i>
                     <p class="mb-0">24 x 7</p>
