--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
 
 <!--page title start-->
 
-<section class="page-title parallaxie" data-bg-img="images/bg/01.jpg">
+<section class="page-title parallaxie" data-bg-img="images/bg/01.png">
   <div class="container">
     <div class="row">
       <div class="col-lg-6">
@@ -272,13 +272,17 @@
       <div class="col-lg-5 pe-lg-0">
         <div class="dark-bg px-3 py-5 p-md-5 mt-n15 custom-mt-0 text-white">
           <div class="contact-media mb-4">
-            <h5 class="text-white">Find Office:</h5>
+            <h5 class="text-white">Registered Office:</h5>
             <span>95/UG-1, Vrindavan Garden S.B.D, Ghaziabad, 201001</span>
+          </div>
+          <div class="contact-media mb-4">
+            <h5 class="text-white">Regional Office:</h5>
+            <span>Shop no.16 F-Wing, Om lokmanya Shopping Center, Station Rd.,Bhayander west.Thane-401101</span>
           </div>
           <div class="contact-media mb-4">
             <h5 class="text-white">Contact Us:</h5>
             <ul class="list-unstyled">
-              <li class="mb-2">Phone: <a href="tel:9769000468">+919769000468</a></li>
+              <li class="mb-2">Phone: <a href="tel:9769748398">+919769748398</a></li>
               <li>Email: <a href="mailto:info@healthelixir.in">info@healthelixir.in</a></li>
             </ul>
           </div>
@@ -357,11 +361,14 @@
               <div class="footer-contact my-4">
                 <ul class="media-icon list-unstyled">
                   <li><i class="flaticon-hospital"></i>
-                    <p class="mb-0">95/UG-1, Vrindavan Garden S.B.D, Ghaziabad,201001</p>
+                    <p class="mb-0">Registered Office:95/UG-1, Vrindavan Garden S.B.D, Ghaziabad,201001</p>
+                  </li>
+                  <li><i class="flaticon-hospital"></i>
+                    <p class="mb-0">Regional Office:Shop no.16 F-Wing, Om lokmanya Shopping Center, Station Rd.,Bhayander west.Thane-401101</p>
                   </li>
                   <li><i class="flaticon-medical-report"></i> <a
                       href="mailto:info@healthelixir.in">info@healthelixir.in</a></li>
-                      <li><i class="flaticon-medical-assistance"></i> <a href="tel:9769000468">9769000468</a>
+                      <li><i class="flaticon-medical-assistance"></i> <a href="tel:9769748398">9769748398</a>
                       </li>
                   <li><i class="flaticon-working-hours"></i>
                     <p class="mb-0">24 x 7</p>
